hw5/code/y.output
Grammar

    0 $accept: sql $end

    1 sql: base_table_def
    2    | insert_statement
    3    | select_statement

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list ')'

    5 base_table_element_list: base_table_element
    6                        | base_table_element_list ',' base_table_element

    7 base_table_element: column_def

    8 column_def: NAME data_type

    9 data_type: CHAR_T '(' INT_VAL_T ')'
   10          | INT_T
   11          | FLOAT_T

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list ')'

   13 column_value_list: atom_value
   14                  | column_value_list ',' atom_value

   15 atom_value: INT_VAL_T
   16           | FLOAT_VAL_T
   17           | CHAR_VAL_T

   18 select_statement: SELECT_T select_clause FROM_T from_clause where_clause

   19 select_clause: col_ref
   20              | select_clause ',' col_ref

   21 from_clause: NAME
   22            | from_clause ',' NAME

   23 col_ref: NAME '.' NAME

   24 scalar_exp: atom_value
   25           | col_ref

   26 cmp_op: EQ_T
   27       | NEQ_T
   28       | GT_T
   29       | GEQ_T
   30       | LT_T
   31       | LEQ_T

   32 cmp_pred: scalar_exp cmp_op scalar_exp

   33 where_clause: /* empty */
   34             | WHERE_T conditions

   35 conditions: cmp_pred
   36           | conditions AND_T cmp_pred


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 9 12
')' (41) 4 9 12
',' (44) 6 14 20 22
'.' (46) 23
error (256)
CREATE_T (258) 4
TABLE_T (259) 4
NAME (260) 4 8 12 21 22 23
INT_VAL_T (261) 9 15
FLOAT_VAL_T (262) 16
CHAR_VAL_T (263) 17
CHAR_T (264) 9
INT_T (265) 10
FLOAT_T (266) 11
INSERT_T (267) 12
INTO_T (268) 12
VALUES_T (269) 12
EQ_T (270) 26
NEQ_T (271) 27
GT_T (272) 28
GEQ_T (273) 29
LT_T (274) 30
LEQ_T (275) 31
AND_T (276) 36
SELECT_T (277) 18
FROM_T (278) 18
WHERE_T (279) 34


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
sql (30)
    on left: 1 2 3, on right: 0
base_table_def (31)
    on left: 4, on right: 1
base_table_element_list (32)
    on left: 5 6, on right: 4 6
base_table_element (33)
    on left: 7, on right: 5 6
column_def (34)
    on left: 8, on right: 7
data_type (35)
    on left: 9 10 11, on right: 8
insert_statement (36)
    on left: 12, on right: 2
column_value_list (37)
    on left: 13 14, on right: 12 14
atom_value (38)
    on left: 15 16 17, on right: 13 14 24
select_statement (39)
    on left: 18, on right: 3
select_clause (40)
    on left: 19 20, on right: 18 20
from_clause (41)
    on left: 21 22, on right: 18 22
col_ref (42)
    on left: 23, on right: 19 20 25
scalar_exp (43)
    on left: 24 25, on right: 32
cmp_op (44)
    on left: 26 27 28 29 30 31, on right: 32
cmp_pred (45)
    on left: 32, on right: 35 36
where_clause (46)
    on left: 33 34, on right: 18
conditions (47)
    on left: 35 36, on right: 34 36


state 0

    0 $accept: . sql $end

    CREATE_T  shift, and go to state 1
    INSERT_T  shift, and go to state 2
    SELECT_T  shift, and go to state 3

    sql               go to state 4
    base_table_def    go to state 5
    insert_statement  go to state 6
    select_statement  go to state 7


state 1

    4 base_table_def: CREATE_T . TABLE_T NAME '(' base_table_element_list ')'

    TABLE_T  shift, and go to state 8


state 2

   12 insert_statement: INSERT_T . INTO_T NAME VALUES_T '(' column_value_list ')'

    INTO_T  shift, and go to state 9


state 3

   18 select_statement: SELECT_T . select_clause FROM_T from_clause where_clause

    NAME  shift, and go to state 10

    select_clause  go to state 11
    col_ref        go to state 12


state 4

    0 $accept: sql . $end

    $end  shift, and go to state 13


state 5

    1 sql: base_table_def .

    $default  reduce using rule 1 (sql)


state 6

    2 sql: insert_statement .

    $default  reduce using rule 2 (sql)


state 7

    3 sql: select_statement .

    $default  reduce using rule 3 (sql)


state 8

    4 base_table_def: CREATE_T TABLE_T . NAME '(' base_table_element_list ')'

    NAME  shift, and go to state 14


state 9

   12 insert_statement: INSERT_T INTO_T . NAME VALUES_T '(' column_value_list ')'

    NAME  shift, and go to state 15


state 10

   23 col_ref: NAME . '.' NAME

    '.'  shift, and go to state 16


state 11

   18 select_statement: SELECT_T select_clause . FROM_T from_clause where_clause
   20 select_clause: select_clause . ',' col_ref

    FROM_T  shift, and go to state 17
    ','     shift, and go to state 18


state 12

   19 select_clause: col_ref .

    $default  reduce using rule 19 (select_clause)


state 13

    0 $accept: sql $end .

    $default  accept


state 14

    4 base_table_def: CREATE_T TABLE_T NAME . '(' base_table_element_list ')'

    '('  shift, and go to state 19


state 15

   12 insert_statement: INSERT_T INTO_T NAME . VALUES_T '(' column_value_list ')'

    VALUES_T  shift, and go to state 20


state 16

   23 col_ref: NAME '.' . NAME

    NAME  shift, and go to state 21


state 17

   18 select_statement: SELECT_T select_clause FROM_T . from_clause where_clause

    NAME  shift, and go to state 22

    from_clause  go to state 23


state 18

   20 select_clause: select_clause ',' . col_ref

    NAME  shift, and go to state 10

    col_ref  go to state 24


state 19

    4 base_table_def: CREATE_T TABLE_T NAME '(' . base_table_element_list ')'

    NAME  shift, and go to state 25

    base_table_element_list  go to state 26
    base_table_element       go to state 27
    column_def               go to state 28


state 20

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T . '(' column_value_list ')'

    '('  shift, and go to state 29


state 21

   23 col_ref: NAME '.' NAME .

    $default  reduce using rule 23 (col_ref)


state 22

   21 from_clause: NAME .

    $default  reduce using rule 21 (from_clause)


state 23

   18 select_statement: SELECT_T select_clause FROM_T from_clause . where_clause
   22 from_clause: from_clause . ',' NAME

    WHERE_T  shift, and go to state 30
    ','      shift, and go to state 31

    $default  reduce using rule 33 (where_clause)

    where_clause  go to state 32


state 24

   20 select_clause: select_clause ',' col_ref .

    $default  reduce using rule 20 (select_clause)


state 25

    8 column_def: NAME . data_type

    CHAR_T   shift, and go to state 33
    INT_T    shift, and go to state 34
    FLOAT_T  shift, and go to state 35

    data_type  go to state 36


state 26

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list . ')'
    6 base_table_element_list: base_table_element_list . ',' base_table_element

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 27

    5 base_table_element_list: base_table_element .

    $default  reduce using rule 5 (base_table_element_list)


state 28

    7 base_table_element: column_def .

    $default  reduce using rule 7 (base_table_element)


state 29

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' . column_value_list ')'

    INT_VAL_T    shift, and go to state 39
    FLOAT_VAL_T  shift, and go to state 40
    CHAR_VAL_T   shift, and go to state 41

    column_value_list  go to state 42
    atom_value         go to state 43


state 30

   34 where_clause: WHERE_T . conditions

    NAME         shift, and go to state 10
    INT_VAL_T    shift, and go to state 39
    FLOAT_VAL_T  shift, and go to state 40
    CHAR_VAL_T   shift, and go to state 41

    atom_value  go to state 44
    col_ref     go to state 45
    scalar_exp  go to state 46
    cmp_pred    go to state 47
    conditions  go to state 48


state 31

   22 from_clause: from_clause ',' . NAME

    NAME  shift, and go to state 49


state 32

   18 select_statement: SELECT_T select_clause FROM_T from_clause where_clause .

    $default  reduce using rule 18 (select_statement)


state 33

    9 data_type: CHAR_T . '(' INT_VAL_T ')'

    '('  shift, and go to state 50


state 34

   10 data_type: INT_T .

    $default  reduce using rule 10 (data_type)


state 35

   11 data_type: FLOAT_T .

    $default  reduce using rule 11 (data_type)


state 36

    8 column_def: NAME data_type .

    $default  reduce using rule 8 (column_def)


state 37

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list ')' .

    $default  reduce using rule 4 (base_table_def)


state 38

    6 base_table_element_list: base_table_element_list ',' . base_table_element

    NAME  shift, and go to state 25

    base_table_element  go to state 51
    column_def          go to state 28


state 39

   15 atom_value: INT_VAL_T .

    $default  reduce using rule 15 (atom_value)


state 40

   16 atom_value: FLOAT_VAL_T .

    $default  reduce using rule 16 (atom_value)


state 41

   17 atom_value: CHAR_VAL_T .

    $default  reduce using rule 17 (atom_value)


state 42

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list . ')'
   14 column_value_list: column_value_list . ',' atom_value

    ')'  shift, and go to state 52
    ','  shift, and go to state 53


state 43

   13 column_value_list: atom_value .

    $default  reduce using rule 13 (column_value_list)


state 44

   24 scalar_exp: atom_value .

    $default  reduce using rule 24 (scalar_exp)


state 45

   25 scalar_exp: col_ref .

    $default  reduce using rule 25 (scalar_exp)


state 46

   32 cmp_pred: scalar_exp . cmp_op scalar_exp

    EQ_T   shift, and go to state 54
    NEQ_T  shift, and go to state 55
    GT_T   shift, and go to state 56
    GEQ_T  shift, and go to state 57
    LT_T   shift, and go to state 58
    LEQ_T  shift, and go to state 59

    cmp_op  go to state 60


state 47

   35 conditions: cmp_pred .

    $default  reduce using rule 35 (conditions)


state 48

   34 where_clause: WHERE_T conditions .
   36 conditions: conditions . AND_T cmp_pred

    AND_T  shift, and go to state 61

    $default  reduce using rule 34 (where_clause)


state 49

   22 from_clause: from_clause ',' NAME .

    $default  reduce using rule 22 (from_clause)


state 50

    9 data_type: CHAR_T '(' . INT_VAL_T ')'

    INT_VAL_T  shift, and go to state 62


state 51

    6 base_table_element_list: base_table_element_list ',' base_table_element .

    $default  reduce using rule 6 (base_table_element_list)


state 52

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list ')' .

    $default  reduce using rule 12 (insert_statement)


state 53

   14 column_value_list: column_value_list ',' . atom_value

    INT_VAL_T    shift, and go to state 39
    FLOAT_VAL_T  shift, and go to state 40
    CHAR_VAL_T   shift, and go to state 41

    atom_value  go to state 63


state 54

   26 cmp_op: EQ_T .

    $default  reduce using rule 26 (cmp_op)


state 55

   27 cmp_op: NEQ_T .

    $default  reduce using rule 27 (cmp_op)


state 56

   28 cmp_op: GT_T .

    $default  reduce using rule 28 (cmp_op)


state 57

   29 cmp_op: GEQ_T .

    $default  reduce using rule 29 (cmp_op)


state 58

   30 cmp_op: LT_T .

    $default  reduce using rule 30 (cmp_op)


state 59

   31 cmp_op: LEQ_T .

    $default  reduce using rule 31 (cmp_op)


state 60

   32 cmp_pred: scalar_exp cmp_op . scalar_exp

    NAME         shift, and go to state 10
    INT_VAL_T    shift, and go to state 39
    FLOAT_VAL_T  shift, and go to state 40
    CHAR_VAL_T   shift, and go to state 41

    atom_value  go to state 44
    col_ref     go to state 45
    scalar_exp  go to state 64


state 61

   36 conditions: conditions AND_T . cmp_pred

    NAME         shift, and go to state 10
    INT_VAL_T    shift, and go to state 39
    FLOAT_VAL_T  shift, and go to state 40
    CHAR_VAL_T   shift, and go to state 41

    atom_value  go to state 44
    col_ref     go to state 45
    scalar_exp  go to state 46
    cmp_pred    go to state 65


state 62

    9 data_type: CHAR_T '(' INT_VAL_T . ')'

    ')'  shift, and go to state 66


state 63

   14 column_value_list: column_value_list ',' atom_value .

    $default  reduce using rule 14 (column_value_list)


state 64

   32 cmp_pred: scalar_exp cmp_op scalar_exp .

    $default  reduce using rule 32 (cmp_pred)


state 65

   36 conditions: conditions AND_T cmp_pred .

    $default  reduce using rule 36 (conditions)


state 66

    9 data_type: CHAR_T '(' INT_VAL_T ')' .

    $default  reduce using rule 9 (data_type)
